--- a/nextflow.config
+++ b/nextflow.config
@@ -24,6 +24,8 @@ params {
 
   // Use all of manually curated, verified UniProt/SwissProt as the reference proteome for searching for orthologs
   diamond_reference_proteome = "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/complete/uniprot_sprot.fasta.gz"
+  diamond_taxonmap = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/accession2taxid/prot.accession2taxid.gz"
+  diamond_taxdmp = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdmp.zip"
 
   // Boilerplate options
   name = false
