change docker organization name to czbiohub

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,12 +18,15 @@ params {
   extract_coding_peptide_ksize = 7
   extract_coding_peptide_molecule = "protein"
   // UNIPROT human proteome is default reference. Human has Taxon ID 9606
-  peptide_fasta = "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/reference_proteomes/Eukaryota/UP000005640_9606.fasta.gz"
+  extract_coding_peptide_fasta = "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/reference_proteomes/Eukaryota/UP000005640_9606.fasta.gz"
   bloomfilter_tablesize = "1e8"
   extract_coding_jaccard_threshold = 0.5
 
   // Use all of manually curated, verified UniProt/SwissProt as the reference proteome for searching for orthologs
-  diamond_reference_proteome = "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/complete/uniprot_sprot.fasta.gz"
+  diamond_protein_fasta = null
+  // valid terms from ftp://ftp.ncbi.nlm.nih.gov/refseq/release/
+  // e.g. "complete", "archea", "plasmid", "protozoa", "viral"
+  diamond_refseq_release = 'vertebrate_mammalian'
   diamond_taxonmap = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/accession2taxid/prot.accession2taxid.gz"
   diamond_taxdmp = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdmp.zip"
 
