--- a/conf/test.config
+++ b/conf/test.config
@@ -15,11 +15,23 @@ params {
   max_memory = 6.GB
   max_time = 48.h
   // Input data
-  reads = [["10x_mouse_lung_ptprc", 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/testdata/10x_mouse_lung_ptprc_locus.fasta']]
+  reads = [
+  ["10x_mouse_lung_ptprc",
+    'https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/testdata/10x_mouse_lung_ptprc_locus.fasta'],
+  ["human_liver_ptprc",
+      'https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/testdata/human_liver_ptprc.fasta'],
+  ["bonobo_liver_ptprc",
+      'https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/testdata/bonobo_liver_ptprc.fasta']]
   singleEnd = true
 
   peptide_fasta = 'https://github.com/czbiohub/test-datasets/raw/kmermaid/reference/ptprc_bam_translations.fa'
   bloomfilter_tablesize = '1e8'
   extract_coding_peptide_ksize = '11'
   extract_coding_peptide_molecule = 'dayhoff'
+
+  diamond_protein_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
+  diamond_refseq_release = false
+  diamond_taxonmap_zip = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/accession2taxid/prot.accession2taxid.gz"
+  diamond_taxdmp_zip = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdmp.zip"
+
 }
