--- a/environment.yml
+++ b/environment.yml
@@ -16,5 +16,6 @@ dependencies:
   - bioconda::diamond
   - bioconda::fastp
   - pip
+  - unzip
   - pip:
     - git+https://github.com/czbiohub/kh-tools.git@olgabot/partition-coding-reads#egg=khtools
