--- a/environment.yml
+++ b/environment.yml
@@ -18,5 +18,6 @@ dependencies:
   - conda-forge::unzip=6.0
   - conda-forge::rsync=3.1.3
   - pip
+  - unzip
   - pip:
     - git+https://github.com/czbiohub/kh-tools.git@olgabot/more-encodings#egg=khtools
