--- a/conf/test.config
+++ b/conf/test.config
@@ -15,13 +15,13 @@ params {
   max_memory = 6.GB
   max_time = 48.h
   // Input data
-  reads = [
+  readPaths = [
   ["10x_mouse_lung_ptprc",
-    'https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/testdata/10x_mouse_lung_ptprc_locus.fasta'],
+    ['https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/10x_mouse_lung_ptprc_locus.fastq']],
   ["human_liver_ptprc",
-      'https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/testdata/human_liver_ptprc.fasta'],
+      ['https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/human_liver_ptprc.fastq']],
   ["bonobo_liver_ptprc",
-      'https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/testdata/bonobo_liver_ptprc.fasta']]
+      ['https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/bonobo_liver_ptprc.fastq']]]
   singleEnd = true
 
   peptide_fasta = 'https://github.com/czbiohub/test-datasets/raw/kmermaid/reference/ptprc_bam_translations.fa'
@@ -31,7 +31,5 @@ params {
 
   diamond_protein_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
   diamond_refseq_release = false
-  diamond_taxonmap_zip = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/accession2taxid/prot.accession2taxid.gz"
-  diamond_taxdmp_zip = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdmp.zip"
 
 }
