--- a/nextflow.config
+++ b/nextflow.config
@@ -58,7 +58,7 @@ params {
 
 // Container slug. Stable releases should specify release tag!
 // Developmental code should specify :dev
-process.container = 'nfcore/predictorthologs:dev'
+process.container = 'czbiohub/predictorthologs:dev'
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
