Be explicit about file endings for Diamond input data

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,8 +27,8 @@ params {
   // valid terms from ftp://ftp.ncbi.nlm.nih.gov/refseq/release/
   // e.g. "complete", "archea", "plasmid", "protozoa", "viral"
   diamond_refseq_release = 'vertebrate_mammalian'
-  diamond_taxonmap = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/accession2taxid/prot.accession2taxid.gz"
-  diamond_taxdmp = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdmp.zip"
+  diamond_taxonmap_gz = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/accession2taxid/prot.accession2taxid.gz"
+  diamond_taxdmp_zip = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdmp.zip"
 
   // Boilerplate options
   name = false
