--- a/conf/test.config
+++ b/conf/test.config
@@ -24,9 +24,8 @@ params {
       ['https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/bonobo_liver_ptprc.fastq']]]
   singleEnd = true
 
-  peptide_fasta = 'https://github.com/czbiohub/test-datasets/raw/kmermaid/reference/ptprc_bam_translations.fa'
-  bloomfilter_tablesize = '1e8'
-  extract_coding_peptide_ksize = '11'
+  extract_coding_peptide_fasta = 'https://github.com/czbiohub/test-datasets/raw/kmermaid/reference/ptprc_bam_translations.fa'
+  extract_coding_peptide_ksize = '12'
   extract_coding_peptide_molecule = 'dayhoff'
 
   diamond_protein_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
