--- a/environment.yml
+++ b/environment.yml
@@ -12,9 +12,9 @@ dependencies:
   - bioconda::multiqc=1.7
   - conda-forge::r-markdown=1.1
   - conda-forge::r-base=3.6.1
-  - bioconda::samtools
-  - bioconda::diamond
-  - bioconda::fastp
+  - bioconda::samtools=1.10
+  - bioconda::diamond=0.9.30
+  - bioconda::fastp=0.20.0
   - pip
   - pip:
     - git+https://github.com/czbiohub/kh-tools.git@olgabot/more-encodings#egg=khtools
