--- a/conf/test.config
+++ b/conf/test.config
@@ -22,7 +22,7 @@ params {
       ['https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/human_liver_ptprc.fastq']],
   ["bonobo_liver_ptprc",
       ['https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/bonobo_liver_ptprc.fastq']]]
-  singleEnd = true
+  single_end = true
 
   extract_coding_peptide_fasta = 'https://github.com/czbiohub/test-datasets/raw/kmermaid/reference/ptprc_bam_translations.fa'
   extract_coding_peptide_molecule = 'dayhoff'
