--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,7 @@ params {
   // TODO nf-core: Specify your pipeline's command line flags
   genome = false
   reads = "data/*{1,2}.fastq.gz"
-  singleEnd = false
+  single_end = false
   outdir = './results'
 
   extract_coding_peptide_molecule = "protein"
