Try to make nf-core linting happy

--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -14,3 +14,4 @@ jobs:
       - name: Check PRs
         run: |
           [[ $(git remote get-url origin) == *czbiohub/nf-predictorthologs ]] && [[ ${GITHUB_BASE_REF} = "master" ]] && { [[ ${GITHUB_HEAD_REF} = "dev" ]] || [[ ${GITHUB_BASE_REF} = "patch" ]]; }
+          # {{ [[ $(git remote get-url origin) == *nf-core/predictorthologs ]] && [[ ${{GITHUB_HEAD_REF}} = "dev" ]]; }} || [[ ${{GITHUB_HEAD_REF}} == "patch" ]]
