Set default diamond reference fasta to false, not null

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,7 +20,7 @@ params {
   extract_coding_peptide_fasta = "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/reference_proteomes/Eukaryota/UP000005640_9606.fasta.gz"
 
   // Use all of manually curated, verified UniProt/SwissProt as the reference proteome for searching for orthologs
-  diamond_protein_fasta = null
+  diamond_protein_fasta = false
   // valid terms from ftp://ftp.ncbi.nlm.nih.gov/refseq/release/
   // e.g. "complete", "archea", "plasmid", "protozoa", "viral"
   diamond_refseq_release = 'vertebrate_mammalian'
