--- a/environment.yml
+++ b/environment.yml
@@ -9,7 +9,6 @@ dependencies:
   - conda-forge::python=3.7.3
   # TODO nf-core: Add required software dependencies here
   - bioconda::fastqc=0.11.8
-  - bioconda::multiqc=1.7
   - conda-forge::r-markdown=1.1
   - conda-forge::r-base=3.6.1
   - bioconda::samtools=1.10
@@ -17,4 +16,5 @@ dependencies:
   - bioconda::fastp=0.20.0
   - pip
   - pip:
-    - git+https://github.com/czbiohub/kh-tools.git@olgabot/more-encodings#egg=khtools
+    - git+https://github.com/czbiohub/kh-tools.git@master#egg=khtools
+    - git+https://github.com/czbiohub/MultiQC.git@olgabot/khtools#egg=multiqc
