--- a/nextflow.config
+++ b/nextflow.config
@@ -83,6 +83,7 @@ profiles {
     singularity.autoMounts = true
   }
   test { includeConfig 'conf/test.config' }
+  test_download_refseq { includeConfig 'conf/test_download_refseq.config' }
 }
 
 // Load igenomes.config if required
