--- a/environment.yml
+++ b/environment.yml
@@ -15,6 +15,8 @@ dependencies:
   - bioconda::samtools=1.10
   - bioconda::diamond=0.9.30
   - bioconda::fastp=0.20.0
+  - conda-forge::unzip=6.0
+  - conda-forge::rsync=3.1.3
   - pip
   - pip:
     - git+https://github.com/czbiohub/kh-tools.git@olgabot/more-encodings#egg=khtools
