--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ channels:
 dependencies:
   - conda-forge::python=3.7.3
   # TODO nf-core: Add required software dependencies here
+  - bioconda::bedtools=2.29.2
   - bioconda::fastqc=0.11.8
   - bioconda::multiqc=1.7
   - conda-forge::r-markdown=1.1
