Add test for using existing diamond database

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,6 +21,7 @@ params {
 
   // Use all of manually curated, verified UniProt/SwissProt as the reference proteome for searching for orthologs
   diamond_protein_fasta = false
+  diamond_database = false
   // valid terms from ftp://ftp.ncbi.nlm.nih.gov/refseq/release/
   // e.g. "complete", "archea", "plasmid", "protozoa", "viral"
   diamond_refseq_release = 'vertebrate_mammalian'
@@ -84,6 +85,7 @@ profiles {
   }
   test { includeConfig 'conf/test.config' }
   test_download_refseq { includeConfig 'conf/test_download_refseq.config' }
+  test_existing_database { includeConfig 'conf/test_existing_database.config' }
 }
 
 // Load igenomes.config if required
