--- a/conf/test_bam_bed_intersect.config
+++ b/conf/test_bam_bed_intersect.config
@@ -18,7 +18,7 @@ params {
   bed = "https://github.com/czbiohub/test-datasets/blob/predictorthologs/reference/Pongo_abelii.PPYG2.ptprc_locus.bed"
   bam = "https://github.com/czbiohub/test-datasets/blob/predictorthologs/testdata/SRR306792_GSM752645_ppy_br_M_1_1Aligned.sortedByCoord.out.ptprc_subset.bam"
   single_end = true
-
+  reads = false
   extract_coding_peptide_fasta = 'https://github.com/czbiohub/test-datasets/raw/kmermaid/reference/ptprc_bam_translations.fa'
   extract_coding_peptide_molecule = 'dayhoff'
 
@@ -27,3 +27,4 @@ params {
   diamond_taxonmap_gz = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/prot.accession2taxid.vertebrate_mammalian_ptprc.with_header.txt.gz"
 
 }
+
