--- a/nextflow.config
+++ b/nextflow.config
@@ -86,6 +86,7 @@ profiles {
   test { includeConfig 'conf/test.config' }
   test_download_refseq { includeConfig 'conf/test_download_refseq.config' }
   test_existing_database { includeConfig 'conf/test_existing_database.config' }
+  test_bam_bed_intersect { includeConfig 'conf/test_bam_bed_intersect.config' }
 }
 
 // Load igenomes.config if required
