Add bedtools to environment

--- a/environment.yml
+++ b/environment.yml
@@ -16,6 +16,7 @@ dependencies:
   - bioconda::samtools=1.10
   - bioconda::diamond=0.9.30
   - bioconda::fastp=0.20.0
+  - bioconda::bedtools=2.29.2
   - pip
   - pip:
     - git+https://github.com/czbiohub/kh-tools.git@olgabot/more-encodings#egg=khtools
