--- a/conf/test_bam_bed_intersect.config
+++ b/conf/test_bam_bed_intersect.config
@@ -15,9 +15,8 @@ params {
   max_memory = 6.GB
   max_time = 48.h
   // Input data
-  // bed = "https://github.com/czbiohub/test-datasets/blob/predictorthologs/reference/Pongo_abelii.PPYG2.ptprc_locus.bed"
-  bed = "https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/reference/Pongo_abelii.PPYG2.ptprc_locus.bed"
-  bam = "https://github.com/czbiohub/test-datasets/blob/predictorthologs/testdata/SRR306792_GSM752645_ppy_br_M_1_1Aligned.sortedByCoord.out.ptprc_subset.bam"
+  bed = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/Pongo_abelii.PPYG2.ptprc_locus.bed"
+  bam = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/SRR306792_GSM752645_ppy_br_M_1_1Aligned.sortedByCoord.out.ptprc_subset.bam"
   single_end = true
   extract_coding_peptide_fasta = 'https://github.com/czbiohub/test-datasets/raw/kmermaid/reference/ptprc_bam_translations.fa'
   extract_coding_peptide_molecule = 'dayhoff'
