--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,8 @@ params {
   // Workflow flags
   // TODO nf-core: Specify your pipeline's command line flags
   genome = false
-  reads = "data/*{1,2}.fastq.gz"
+  reads = false
+  readPaths = false  
   single_end = false
   outdir = './results'
 
