--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -45,6 +45,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install nf-core
+          pip install git+https://github.com/nf-core/tools.git@dev
       - name: Run nf-core lint
         run: nf-core lint ${GITHUB_WORKSPACE}
