--- a/conf/test_bam.config
+++ b/conf/test_bam.config
@@ -17,6 +17,7 @@ params {
   // Input data
   bed = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/Pongo_abelii.PPYG2.ptprc_locus.bed"
   bam = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/SRR306792_GSM752645_ppy_br_M_1_1Aligned.sortedByCoord.out.ptprc_subset.bam"
+  bai = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/SRR306792_GSM752645_ppy_br_M_1_1Aligned.sortedByCoord.out.ptprc_subset.bam.bai"
   single_end = true
   extract_coding_peptide_fasta = 'https://github.com/czbiohub/test-datasets/raw/kmermaid/reference/ptprc_bam_translations.fa'
   extract_coding_peptide_molecule = 'dayhoff'
