--- a/nextflow.config
+++ b/nextflow.config
@@ -31,7 +31,7 @@ params {
 
   // Boilerplate options
   name = false
-  multiqc_config = false
+  multiqc_config = 'assets/multiqc_config.yaml'
   email = false
   email_on_fail = false
   max_multiqc_email_size = 25.MB
