Still merging in template changes

--- a/conf/test.config
+++ b/conf/test.config
@@ -1,10 +1,10 @@
 /*
- * -------------------------------------------------------------------
- *  Nextflow config file for running tests with bam, extract_coding
- * -----------------------------------------------------------------------
+ * -------------------------------------------------
+ *  Nextflow config file for running tests
+ * -------------------------------------------------
  * Defines bundled input files and everything required
  * to run a fast and simple test. Use as follows:
- *   nextflow run nf-core/kmermaid -profile test_extract_coding_bam.config
+ *   nextflow run nf-core/predictorthologs -profile test,<docker/singularity>
  */
 
 params {
