--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,8 @@ jobs:
           sudo mv nextflow /usr/local/bin/
       - name: Pull docker image
         run: |
-          docker pull czbiohub/predictorthologs:dev && docker tag czbiohub/predictorthologs:dev czbiohub/predictorthologs:dev
+          docker pull nfcore/predictorthologs:dev
+          docker tag nfcore/predictorthologs:dev nfcore/predictorthologs:dev
       - name: Run pipeline with test data
         run: |
           # TODO nf-core: You can customise CI pipeline run tests as required
@@ -41,4 +42,4 @@ jobs:
         run: |
           # TODO nf-core: You can customise CI pipeline run tests as required
           # (eg. adding multiple test runs with different parameters)
-          nextflow run ${GITHUB_WORKSPACE} -profile test_bam,docker          
+          nextflow run ${GITHUB_WORKSPACE} -profile test_bam,docker
