--- a/conf/test_bam.config
+++ b/conf/test_bam.config
@@ -19,7 +19,7 @@ params {
   bam = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/SRR306792_GSM752645_ppy_br_M_1_1Aligned.sortedByCoord.out.ptprc_subset.bam"
   bai = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/SRR306792_GSM752645_ppy_br_M_1_1Aligned.sortedByCoord.out.ptprc_subset.bam.bai"
   single_end = true
-  extract_coding_peptide_fasta = 'https://github.com/czbiohub/test-datasets/raw/kmermaid/reference/ptprc_bam_translations.fa'
+  extract_coding_peptide_fasta = 'https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
   extract_coding_peptide_molecule = 'dayhoff'
 
   diamond_protein_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
@@ -27,4 +27,3 @@ params {
   diamond_taxonmap_gz = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/prot.accession2taxid.vertebrate_mammalian_ptprc.with_header.txt.gz"
 
 }
-
