Add paramters for protein fastas and hashes

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,9 +12,12 @@ params {
   // TODO nf-core: Specify your pipeline's command line flags
   genome = false
   reads = false
-  readPaths = false  
+  readPaths = false
   single_end = false
   outdir = './results'
+
+  protein_fastas = false
+  hashes = false
 
   extract_coding_peptide_molecule = "protein"
   // UNIPROT human proteome is default reference. Human has Taxon ID 9606
