--- a/environment.yml
+++ b/environment.yml
@@ -21,6 +21,7 @@ dependencies:
   - bioconda::fastp=0.20.0
   - bioconda::bedtools=2.29.2
   - pip
+  - conda-forge::rust
   - pip:
     - git+https://github.com/czbiohub/kh-tools.git@master#egg=khtools
     - git+https://github.com/czbiohub/sourmash.git@olgabot/hash2kmer-protein
