Add bam, bed, bai parameters to nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,10 @@ params {
   single_end = false
   outdir = './results'
 
+  bam = false
+  bed = false
+  bai = false
+
   skip_trimming = false
 
   protein_fastas = false
