Add config for test_input_is_protein

--- a/nextflow.config
+++ b/nextflow.config
@@ -100,6 +100,7 @@ profiles {
   test_download_refseq { includeConfig 'conf/test_download_refseq.config' }
   test_existing_database { includeConfig 'conf/test_existing_database.config' }
   test_bam { includeConfig 'conf/test_bam.config' }
+  test_input_is_protein { includeConfig 'conf/test_input_is_protein.config' }
 }
 
 // Load igenomes.config if required
