Add csv_protein_fasta parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,6 +22,7 @@ params {
 
   skip_trimming = false
 
+  csv_protein_fasta = false
   protein_fastas = false
   hashes = false
   hash2kmer_ksize = 21
