add hash2kmer_molecule parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -26,6 +26,7 @@ params {
   protein_fastas = false
   hashes = false
   hash2kmer_ksize = 21
+  hash2kmer_molecule = 'protein'
 
   extract_coding_peptide_molecule = "protein"
   // UNIPROT human proteome is default reference. Human has Taxon ID 9606
