--- a/nextflow.config
+++ b/nextflow.config
@@ -99,9 +99,10 @@ profiles {
     singularity.autoMounts = true
   }
   test { includeConfig 'conf/test.config' }
+  test_bam { includeConfig 'conf/test_bam.config' }
   test_download_refseq { includeConfig 'conf/test_download_refseq.config' }
   test_existing_database { includeConfig 'conf/test_existing_database.config' }
-  test_bam { includeConfig 'conf/test_bam.config' }
+  test_hash2kmer { includeConfig 'conf/test_hash2kmer.config' }
   test_input_is_protein { includeConfig 'conf/test_input_is_protein.config' }
 }
 
