--- a/environment.yml
+++ b/environment.yml
@@ -22,6 +22,8 @@ dependencies:
   - bioconda::bedtools=2.29.2
   - pip=20.0.2
   - conda-forge::rust=1.41.0
+  - conda-forge::scikit-learn=0.22.1
+  - conda-forge::pandas=1.0.3
   - pip:
     - git+https://github.com/czbiohub/kh-tools.git@master#egg=khtools
     - git+https://github.com/czbiohub/sourmash.git@olgabot/hash2kmer-protein
