--- a/environment.yml
+++ b/environment.yml
@@ -24,6 +24,7 @@ dependencies:
   - conda-forge::rust=1.41.0
   - conda-forge::scikit-learn=0.22.1
   - conda-forge::pandas=1.0.3
+  - conda-forge::tqdm=4.45.0
   - pip:
     - git+https://github.com/czbiohub/kh-tools.git@master#egg=khtools
     - git+https://github.com/czbiohub/sourmash.git@olgabot/hash2kmer-protein
