add diff hash expression variables

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,6 +28,10 @@ params {
   hash2kmer_ksize = 21
   hash2kmer_molecule = 'protein'
 
+  diff_hash_expression = false
+  diff_hash_sig = 'sig'
+  diff_hash_group = 'group'
+
   extract_coding_peptide_molecule = "protein"
   // UNIPROT human proteome is default reference. Human has Taxon ID 9606
   extract_coding_peptide_fasta = "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/reference_proteomes/Eukaryota/UP000005640_9606.fasta.gz"
