--- a/nextflow.config
+++ b/nextflow.config
@@ -108,6 +108,7 @@ profiles {
   test_existing_database { includeConfig 'conf/test_existing_database.config' }
   test_hash2kmer { includeConfig 'conf/test_hash2kmer.config' }
   test_input_is_protein { includeConfig 'conf/test_input_is_protein.config' }
+  test_diff_hash { includeConfig 'conf/test_diff_hash.config' }
 }
 
 // Load igenomes.config if required
