Update default options for differential hash expression

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,9 +28,8 @@ params {
   hash2kmer_ksize = 21
   hash2kmer_molecule = 'protein'
 
+  // Differential hash expression options
   diff_hash_expression = false
-  diff_hash_sig = 'sig'
-  diff_hash_group = 'group'
 
   extract_coding_peptide_molecule = "protein"
   // UNIPROT human proteome is default reference. Human has Taxon ID 9606
