--- a/nextflow.config
+++ b/nextflow.config
@@ -30,6 +30,9 @@ params {
 
   // Differential hash expression options
   diff_hash_expression = false
+  diff_hash_inverse_regularization_strength = 0.1  // Small numbers for fewer features
+  diff_hash_solver = 'saga'  // Saga solver is fast for large datasets
+  diff_hash_penalty = 'l1'   // Use strong penalty for large datasets
 
   extract_coding_peptide_molecule = "protein"
   // UNIPROT human proteome is default reference. Human has Taxon ID 9606
