Specify less stringent classification parameters for testing

--- a/conf/test_diff_hash.config
+++ b/conf/test_diff_hash.config
@@ -19,7 +19,12 @@ params {
   hash2kmer_molecule = 'dayhoff'
   hash2kmer_ksize = 45
   input_is_protein = true
+
+  // Differential hash expression options
   diff_hash_expression = true
+  diff_hash_inverse_regularization_strength = 1  // Use large number for testing
+  diff_hash_solver = 'liblinear'  // Use simpler model for testing
+  diff_hash_penalty = 'l2'        // Use less strict penalty for testing
 
   diamond_protein_fasta = false
   // "Other" is the smallest refseq release: ftp://ftp.ncbi.nlm.nih.gov/refseq/release/other/
