--- a/conf/test_diff_hash.config
+++ b/conf/test_diff_hash.config
@@ -22,9 +22,9 @@ params {
 
   // Differential hash expression options
   diff_hash_expression = true
-  diff_hash_inverse_regularization_strength = 1  // Use large number for testing
+  diff_hash_inverse_regularization_strength = 0.5  // Use larger number for testing, for less regularization on this small dataset
   diff_hash_solver = 'liblinear'  // Use simpler model for testing
-  diff_hash_penalty = 'l2'        // Use less strict penalty for testing
+  diff_hash_penalty = 'l1'
 
   diamond_protein_fasta = false
   // "Other" is the smallest refseq release: ftp://ftp.ncbi.nlm.nih.gov/refseq/release/other/
