--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,7 @@ params {
   // TODO nf-core: Specify your pipeline's command line flags
   genome = false
   reads = false
+  readPaths = false
   single_end = false
   outdir = './results'
 
