init reads_csv input

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,7 +13,9 @@ params {
   genome = false
   reads = false
   readPaths = false
+  reads_csv = false
   single_end = false
+  protein_fasta_paths = false
   outdir = './results'
 
   bam = false
