add test config

--- a/nextflow.config
+++ b/nextflow.config
@@ -40,7 +40,7 @@ params {
   diamond_protein_fasta = false
   diamond_database = false
   // valid terms from ftp://ftp.ncbi.nlm.nih.gov/refseq/release/
-  // e.g. "complete", "archea", "plasmid", "protozoa", "viral"
+  // e.g. "complete", "archaea", "plasmid", "protozoa", "viral"
   diamond_refseq_release = 'vertebrate_mammalian'
   diamond_taxonmap_gz = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/accession2taxid/prot.accession2taxid.gz"
   diamond_taxdmp_zip = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdmp.zip"
@@ -106,6 +106,7 @@ profiles {
   test_existing_database { includeConfig 'conf/test_existing_database.config' }
   test_hash2kmer { includeConfig 'conf/test_hash2kmer.config' }
   test_input_is_protein { includeConfig 'conf/test_input_is_protein.config' }
+  test_reads_csv { includeConfig 'conf/test_reads_csv.config' }
 }
 
 // Load igenomes.config if required
