better csv naming
Co-Authored-By: Olga Botvinnik <olga.botvinnik@czbiohub.org>

--- a/conf/test_reads_csv.config
+++ b/conf/test_reads_csv.config
@@ -15,7 +15,7 @@ params {
   max_memory = 6.GB
   max_time = 48.h
   // Input data
-  reads_csv = "conf/test_samples.csv"
+  csv = "conf/test_samples.csv"
   single_end = true
 
   extract_coding_peptide_fasta = 'https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
