--- a/nextflow.config
+++ b/nextflow.config
@@ -106,7 +106,7 @@ profiles {
   test_existing_database { includeConfig 'conf/test_existing_database.config' }
   test_hash2kmer { includeConfig 'conf/test_hash2kmer.config' }
   test_input_is_protein { includeConfig 'conf/test_input_is_protein.config' }
-  test_reads_csv { includeConfig 'conf/test_reads_csv.config' }
+  test_csv { includeConfig 'conf/test_csv.config' }
 }
 
 // Load igenomes.config if required
