--- a/environment.yml
+++ b/environment.yml
@@ -23,6 +23,7 @@ dependencies:
   - pip=20.0.2
   - conda-forge::rust=1.41.0
   - conda-forge::scikit-learn=0.22.1
+  - bioconda::sourmash=3.2.2
   - conda-forge::pandas=1.0.3
   - conda-forge::tqdm=4.45.0
   - thombashi::pathvalidate=2.2.0
@@ -30,4 +31,3 @@ dependencies:
   - conda-forge::s3fs=0.4.2
   - pip:
     - git+https://github.com/czbiohub/kh-tools.git@master#egg=khtools
-    - git+https://github.com/czbiohub/sourmash.git@olgabot/hash2kmer-protein
