--- a/environment.yml
+++ b/environment.yml
@@ -29,5 +29,7 @@ dependencies:
   - thombashi::pathvalidate=2.2.0
   - jupyter=1.0.0
   - conda-forge::s3fs=0.4.2
+  - bioconda::p7zip=15.09
+  - conda-forge::rsync=3.1.3
   - pip:
     - git+https://github.com/czbiohub/kh-tools.git@master#egg=khtools
