--- a/nextflow.config
+++ b/nextflow.config
@@ -98,7 +98,7 @@ profiles {
     singularity.enabled = true
     singularity.autoMounts = true
   }
-  test { includeConfig 'conf/test.config' }
+  test_fastq { includeConfig 'conf/test_fastq.config' }
   test_bam { includeConfig 'conf/test_bam.config' }
   test_download_refseq { includeConfig 'conf/test_download_refseq.config' }
   test_existing_database { includeConfig 'conf/test_existing_database.config' }
