--- a/conf/test_hash2kmer.config
+++ b/conf/test_hash2kmer.config
@@ -20,8 +20,9 @@ params {
   hash2kmer_molecule = 'dayhoff'
   hash2kmer_ksize = 45
 
-  diamond_protein_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
-  diamond_refseq_release = false
-  diamond_taxonmap_gz = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/prot.accession2taxid.vertebrate_mammalian_ptprc.with_header.txt.gz"
+  diamond_protein_fasta = false
+  // "Other" is the smallest refseq release: ftp://ftp.ncbi.nlm.nih.gov/refseq/release/other/
+  // Protein fasta is 453 B
+  diamond_database = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc_db.dmnd'
 
 }
