--- a/nextflow.config
+++ b/nextflow.config
@@ -99,6 +99,9 @@ profiles {
     // Testing this in nf-core after discussion here https://github.com/nf-core/tools/pull/351
     // once this is established and works well, nextflow might implement this behavior as new default.
     docker.runOptions = '-u \$(id -u):\$(id -g)'
+
+    // Allow auto expansion of temp directory space
+    docker.tmp = "auto"
   }
   singularity {
     singularity.enabled = true
