--- a/conf/test_hash2kmer.config
+++ b/conf/test_hash2kmer.config
@@ -15,10 +15,12 @@ params {
   max_memory = 6.GB
   max_time = 48.h
   // Input data
-  hashes = 'https://github.com/czbiohub/test-datasets/raw/olgabot/predictorthologs/testdata/liver_unaligned__hashes.txt'
-  csv_protein_fasta = 'https://github.com/czbiohub/test-datasets/raw/olgabot/predictorthologs/testdata/liver_unaligned__samples.csv'
+  hashes = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/liver_unaligned__hashes.txt'
+  csv_protein_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/liver_unaligned__samples.csv'
+  csv = 'https://github.com/czbiohub/test-datasets/raw/olgabot-patch-1/testdata/liver_unaligned__samples.csv'
   hash2kmer_molecule = 'dayhoff'
   hash2kmer_ksize = 45
+  input_is_protein = true
 
   diamond_protein_fasta = false
   // "Other" is the smallest refseq release: ftp://ftp.ncbi.nlm.nih.gov/refseq/release/other/
