Rename diamond protein database to reference proteome

--- a/nextflow.config
+++ b/nextflow.config
@@ -34,14 +34,20 @@ params {
   extract_coding_jaccard_threshold = 0.8
   extract_coding_peptide_ksize = 7
 
+  // Either 'diamond' or 'sourmash'
+  protein_searcher = 'diamond'
+
+  reference_proteome_fasta = false
+
   // Use all of manually curated, verified UniProt/SwissProt as the reference proteome for searching for orthologs
-  diamond_protein_fasta = false
   diamond_database = false
   // valid terms from ftp://ftp.ncbi.nlm.nih.gov/refseq/release/
-  // e.g. "complete", "archea", "plasmid", "protozoa", "viral"
-  diamond_refseq_release = 'vertebrate_mammalian'
+  // e.g. "complete", "archea", "plasmid", "protozoa", "viral", "vertebrate_mammalian"
+  diamond_refseq_release = false
   diamond_taxonmap_gz = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/accession2taxid/prot.accession2taxid.gz"
   diamond_taxdmp_zip = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdmp.zip"
+
+  sourmash_index = false
 
   // Boilerplate options
   name = false
