--- a/conf/base.config
+++ b/conf/base.config
@@ -41,6 +41,11 @@ process {
     memory = { check_max( 84.GB * task.attempt, 'memory' ) }
     time = { check_max( 10.h * task.attempt, 'time' ) }
   }
+  withLabel:process_super_high {
+    cpus = { check_max( 12 * task.attempt, 'cpus' ) }
+    memory = { check_max( 168.GB * task.attempt, 'memory' ) }
+    time = { check_max( 16.h * task.attempt, 'time' ) }
+  }
   withLabel:process_long {
     time = { check_max( 20.h * task.attempt, 'time' ) }
   }
