Add test_sourmash_search tests to Makefile and config

--- a/nextflow.config
+++ b/nextflow.config
@@ -110,6 +110,7 @@ profiles {
   test_existing_database { includeConfig 'conf/test_existing_database.config' }
   test_hash2kmer { includeConfig 'conf/test_hash2kmer.config' }
   test_input_is_protein { includeConfig 'conf/test_input_is_protein.config' }
+  test_sourmash_search { includeConfig 'conf/test_sourmash_search.config' }
 }
 
 // Load igenomes.config if required
