--- a/nextflow.config
+++ b/nextflow.config
@@ -112,6 +112,7 @@ profiles {
   test_download_refseq { includeConfig 'conf/test_download_refseq.config' }
   test_existing_database { includeConfig 'conf/test_existing_database.config' }
   test_hash2kmer { includeConfig 'conf/test_hash2kmer.config' }
+  test_hash_featurecounts { includeConfig 'conf/test_hash_featurecounts.config' }
   test_input_is_protein { includeConfig 'conf/test_input_is_protein.config' }
   test_diff_hash { includeConfig 'conf/test_diff_hash.config' }
 }
