--- a/nextflow.config
+++ b/nextflow.config
@@ -34,6 +34,8 @@ params {
   diff_hash_solver = 'saga'  // Saga solver is fast for large datasets
   diff_hash_penalty = 'l1'   // Use strong penalty for large datasets
 
+  count_genes = false
+
   extract_coding_peptide_molecule = "protein"
   // UNIPROT human proteome is default reference. Human has Taxon ID 9606
   extract_coding_peptide_fasta = "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/reference_proteomes/Eukaryota/UP000005640_9606.fasta.gz"
