set count_genes to True

--- a/conf/test_hash_featurecounts.config
+++ b/conf/test_hash_featurecounts.config
@@ -26,6 +26,8 @@ params {
   diff_hash_solver = 'liblinear'  // Use simpler model for testing
   diff_hash_penalty = 'l1'
 
+  count_genes = true
+
   diamond_protein_fasta = false
   // "Other" is the smallest refseq release: ftp://ftp.ncbi.nlm.nih.gov/refseq/release/other/
   // Protein fasta is 453 B
