--- a/nextflow.config
+++ b/nextflow.config
@@ -34,6 +34,7 @@ params {
   diff_hash_solver = 'saga'  // Saga solver is fast for large datasets
   diff_hash_penalty = 'l1'   // Use strong penalty for large datasets
 
+  // Not sure about this name
   count_genes = false
 
   extract_coding_peptide_molecule = "protein"
