--- a/conf/test_hash2kmer.config
+++ b/conf/test_hash2kmer.config
@@ -20,7 +20,7 @@ params {
   hash2kmer_molecule = 'dayhoff'
   hash2kmer_ksize = 45
 
-  diamond_protein_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
+  reference_proteome_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
   diamond_refseq_release = false
   diamond_taxonmap_gz = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/prot.accession2taxid.vertebrate_mammalian_ptprc.with_header.txt.gz"
 
