--- a/nextflow.config
+++ b/nextflow.config
@@ -24,9 +24,6 @@ params {
 
   csv_protein_fasta = false
   protein_fastas = false
-  hashes = false
-  hash2kmer_ksize = 21
-  hash2kmer_molecule = 'protein'
 
   extract_coding_peptide_molecule = "protein"
   // UNIPROT human proteome is default reference. Human has Taxon ID 9606
@@ -38,6 +35,12 @@ params {
   protein_searcher = 'diamond'
 
   reference_proteome_fasta = false
+
+  // Sourmash options
+  sourmash_sbt_index = false  // pre-built index
+  hashes = false
+  sourmash_ksize = 21
+  sourmash_molecule = 'protein'
 
   // Use all of manually curated, verified UniProt/SwissProt as the reference proteome for searching for orthologs
   diamond_database = false
