--- a/conf/test_download_refseq.config
+++ b/conf/test_download_refseq.config
@@ -29,10 +29,11 @@ params {
   extract_coding_peptide_fasta = 'https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
   extract_coding_peptide_molecule = 'dayhoff'
 
-  diamond_protein_fasta = false
   // "Other" is the smallest refseq release: ftp://ftp.ncbi.nlm.nih.gov/refseq/release/other/
   // Protein fasta is 453 B
-  diamond_refseq_release = 'other'
+  refseq_release = 'other'
+
+  diamond_protein_fasta = false
   diamond_taxonmap_gz = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/prot.accession2taxid.vertebrate_mammalian_ptprc.with_header.txt.gz"
 
 }
