downloading refseq fixes

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,7 +22,7 @@ params {
 
   skip_trimming = false
 
-  csv_protein_fasta = false
+  csv = false
   protein_fastas = false
 
   extract_coding_peptide_molecule = "protein"
@@ -33,6 +33,9 @@ params {
 
   // Either 'diamond' or 'sourmash'
   protein_searcher = 'diamond'
+  // valid terms from ftp://ftp.ncbi.nlm.nih.gov/refseq/release/
+  // e.g. "complete", "archea", "plasmid", "protozoa", "viral", "vertebrate_mammalian"
+  refseq_release = false
 
   reference_proteome_fasta = false
 
@@ -44,9 +47,6 @@ params {
 
   // Use all of manually curated, verified UniProt/SwissProt as the reference proteome for searching for orthologs
   diamond_database = false
-  // valid terms from ftp://ftp.ncbi.nlm.nih.gov/refseq/release/
-  // e.g. "complete", "archea", "plasmid", "protozoa", "viral", "vertebrate_mammalian"
-  diamond_refseq_release = false
   diamond_taxonmap_gz = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/accession2taxid/prot.accession2taxid.gz"
   diamond_taxdmp_zip = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdmp.zip"
 
