test_input_is_protein fixes

--- a/nextflow.config
+++ b/nextflow.config
@@ -24,6 +24,7 @@ params {
 
   csv = false
   protein_fastas = false
+  input_is_protein = false
 
   extract_coding_peptide_molecule = "protein"
   // UNIPROT human proteome is default reference. Human has Taxon ID 9606
