--- a/conf/test_hash2kmer.config
+++ b/conf/test_hash2kmer.config
@@ -17,8 +17,8 @@ params {
   // Input data
   hashes = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/liver_unaligned__hashes.txt'
   csv = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/liver_unaligned__samples.csv'
-  hash2kmer_molecule = 'dayhoff'
-  hash2kmer_ksize = 45
+  sourmash_molecule = 'dayhoff'
+  sourmash_ksize = 45
   input_is_protein = true
 
   reference_proteome_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
