Require sourmash ksize and molecule to be specified

--- a/nextflow.config
+++ b/nextflow.config
@@ -43,8 +43,8 @@ params {
   // Sourmash options
   sourmash_sbt_index = false  // pre-built index
   hashes = false
-  sourmash_ksize = 21
-  sourmash_molecule = 'protein'
+  sourmash_ksize = false
+  sourmash_molecule = false
 
   // Use all of manually curated, verified UniProt/SwissProt as the reference proteome for searching for orthologs
   diamond_database = false
