--- a/conf/test_sourmash_search.config
+++ b/conf/test_sourmash_search.config
@@ -16,10 +16,11 @@ params {
   max_time = 48.h
   // Input data
   hashes = 'https://github.com/czbiohub/test-datasets/raw/olgabot/predictorthologs-hash2kmer/testdata/liver_unaligned__hashes.txt'
-  csv_protein_fasta = 'https://github.com/czbiohub/test-datasets/raw/olgabot/predictorthologs-hash2kmer/testdata/liver_unaligned__samples.csv'
-  hash2kmer_molecule = 'dayhoff'
-  hash2kmer_ksize = 45
+  csv = 'https://github.com/czbiohub/test-datasets/raw/olgabot/predictorthologs-hash2kmer/testdata/liver_unaligned__samples.csv'
+  sourmash_molecule = 'dayhoff'
+  sourmash_ksize = 45
 
+  input_is_protein = true
   protein_searcher = 'sourmash'
 
   reference_proteome_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
