extract_coding --> translate everywhere

--- a/nextflow.config
+++ b/nextflow.config
@@ -26,11 +26,11 @@ params {
   protein_fastas = false
   input_is_protein = false
 
-  extract_coding_peptide_molecule = "protein"
+  translate_peptide_molecule = "protein"
   // UNIPROT human proteome is default reference. Human has Taxon ID 9606
-  extract_coding_peptide_fasta = "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/reference_proteomes/Eukaryota/UP000005640_9606.fasta.gz"
-  extract_coding_jaccard_threshold = 0.8
-  extract_coding_peptide_ksize = 7
+  translate_peptide_fasta = "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/reference_proteomes/Eukaryota/UP000005640_9606.fasta.gz"
+  translate_jaccard_threshold = 0.95
+  translate_peptide_ksize = 9
 
   // Either 'diamond' or 'sourmash'
   protein_searcher = 'diamond'
