--- a/conf/test_bam.config
+++ b/conf/test_bam.config
@@ -1,10 +1,10 @@
 /*
  * -------------------------------------------------------------------
- *  Nextflow config file for running tests with bam, extract_coding
+ *  Nextflow config file for running tests with bam, translate
  * -----------------------------------------------------------------------
  * Defines bundled input files and everything required
  * to run a fast and simple test. Use as follows:
- *   nextflow run nf-core/kmermaid -profile test_extract_coding_bam.config
+ *   nextflow run nf-core/kmermaid -profile test_translate_bam.config
  */
 
 params {
@@ -19,8 +19,8 @@ params {
   bam = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/SRR306792_GSM752645_ppy_br_M_1_1Aligned.sortedByCoord.out.ptprc_subset.bam"
   bai = "https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/SRR306792_GSM752645_ppy_br_M_1_1Aligned.sortedByCoord.out.ptprc_subset.bam.bai"
   single_end = true
-  extract_coding_peptide_fasta = 'https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
-  extract_coding_peptide_molecule = 'dayhoff'
+  translate_peptide_fasta = 'https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
+  translate_peptide_molecule = 'dayhoff'
 
   reference_proteome_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
   diamond_refseq_release = false
