--- a/nextflow.config
+++ b/nextflow.config
@@ -22,7 +22,7 @@ params {
 
   skip_trimming = false
 
-  csv_protein_fasta = false
+  csv = false
   protein_fastas = false
   hashes = false
   hash2kmer_ksize = 21
