--- a/environment.yml
+++ b/environment.yml
@@ -31,5 +31,7 @@ dependencies:
   - conda-forge::s3fs=0.4.2
   - bioconda::p7zip=15.09
   - conda-forge::rsync=3.1.3
+  - subread=1.6.4
+  - bioawk=1.0
   - pip:
     - git+https://github.com/czbiohub/kh-tools.git@master#egg=khtools
