--- a/nextflow.config
+++ b/nextflow.config
@@ -125,6 +125,7 @@ profiles {
   test_input_is_protein { includeConfig 'conf/test_input_is_protein.config' }
   test_diff_hash { includeConfig 'conf/test_diff_hash.config' }
   test_sourmash_search { includeConfig 'conf/test_sourmash_search.config' }
+  test_diff_hash_sourmash { includeConfig 'conf/test_diff_hash_sourmash.config' }
 }
 
 // Load igenomes.config if required
