--- a/conf/test_diff_hash.config
+++ b/conf/test_diff_hash.config
@@ -16,8 +16,8 @@ params {
   max_time = 48.h
   // Input data
   csv = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/testdata/diff-hash/samples3.csv'
-  hash2kmer_molecule = 'dayhoff'
-  hash2kmer_ksize = 45
+  sourmash_molecule = 'dayhoff'
+  sourmash_ksize = 45
   input_is_protein = true
 
   // Differential hash expression options
