--- a/conf/test_download_refseq.config
+++ b/conf/test_download_refseq.config
@@ -4,7 +4,7 @@
  * -----------------------------------------------------------------------
  * Defines bundled input files and everything required
  * to run a fast and simple test. Use as follows:
- *   nextflow run nf-core/kmermaid -profile test_translate_bam.config
+ *   nextflow run czbiohub/nf-predictorthologs -profile test_download_refseq.config
  */
 
 params {
