--- a/conf/test_existing_database.config
+++ b/conf/test_existing_database.config
@@ -4,7 +4,7 @@
  * -----------------------------------------------------------------------
  * Defines bundled input files and everything required
  * to run a fast and simple test. Use as follows:
- *   nextflow run nf-core/kmermaid -profile test_existing_database.config
+ *   nextflow run czbiohub/nf-predictorthologs -profile test_existing_database.config
  */
 
 params {
