--- a/conf/base.config
+++ b/conf/base.config
@@ -49,8 +49,9 @@ process {
   withLabel:process_long {
     time = { check_max( 20.h * task.attempt, 'time' ) }
   }
-  withName:get_software_versions {
+  withName:'multiqc|get_software_versions' {
     cache = false
+    errorStrategy = 'ignore'
   }
 
 }
