Rename proteome fasta variables

--- a/nextflow.config
+++ b/nextflow.config
@@ -35,7 +35,7 @@ params {
 
   translate_peptide_molecule = "protein"
   // UNIPROT human proteome is default reference. Human has Taxon ID 9606
-  translate_peptide_fasta = "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/reference_proteomes/Eukaryota/UP000005640_9606.fasta.gz"
+  proteome_translate_fasta = "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/reference_proteomes/Eukaryota/UP000005640_9606.fasta.gz"
   translate_jaccard_threshold = 0.95
   translate_peptide_ksize = 9
 
@@ -45,7 +45,7 @@ params {
   // e.g. "complete", "archea", "plasmid", "protozoa", "viral", "vertebrate_mammalian"
   refseq_release = false
 
-  reference_proteome_fasta = false
+  proteome_search_fasta = false
 
   // Sourmash options
   sourmash_sbt_index = false  // pre-built index
