--- a/conf/test_diff_hash_sourmash.config
+++ b/conf/test_diff_hash_sourmash.config
@@ -30,5 +30,5 @@ params {
   input_is_protein = true
   protein_searcher = 'sourmash'
 
-  reference_proteome_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
+  proteome_search_fasta = 'https://github.com/czbiohub/test-datasets/raw/predictorthologs/reference/ncbi_refseq_vertebrate_mammalian_ptprc.fasta'
 }
