rename count_genes --> do_featurecounts_orthology

--- a/nextflow.config
+++ b/nextflow.config
@@ -61,8 +61,7 @@ params {
 
   // --- Featurecounts orthology options ---
   // Not sure about this name
-  count_genes = false
-
+  do_featurecounts_orthology = false
 
   // Boilerplate options
   name = false
