--- a/nextflow.config
+++ b/nextflow.config
@@ -126,10 +126,10 @@ profiles {
   test_diff_hash { includeConfig 'conf/test_diff_hash.config' }
   test_diff_hash_abundance { includeConfig 'conf/test_diff_hash_abundance.config' }
   test_diff_hash_sourmash { includeConfig 'conf/test_diff_hash_sourmash.config' }
+  test_diff_hash_featurecounts { includeConfig 'conf/test_diff_hash_featurecounts.config' }
   test_download_refseq { includeConfig 'conf/test_download_refseq.config' }
   test_existing_database { includeConfig 'conf/test_existing_database.config' }
   test_hash2kmer { includeConfig 'conf/test_hash2kmer.config' }
-  test_hash_featurecounts { includeConfig 'conf/test_hash_featurecounts.config' }
   test_input_is_protein { includeConfig 'conf/test_input_is_protein.config' }
   test_sourmash_search { includeConfig 'conf/test_sourmash_search.config' }
 }
