--- a/nextflow.config
+++ b/nextflow.config
@@ -122,6 +122,7 @@ profiles {
   test_bam { includeConfig 'conf/test_bam.config' }
   test_diff_hash { includeConfig 'conf/test_diff_hash.config' }
   test_diff_hash_abundance { includeConfig 'conf/test_diff_hash_abundance.config' }
+  test_diff_hash_filter_bam_hashes { includeConfig 'conf/test_diff_hash_filter_bam_hashes.config' }
   test_diff_hash_sourmash { includeConfig 'conf/test_diff_hash_sourmash.config' }
   test_download_refseq { includeConfig 'conf/test_download_refseq.config' }
   test_existing_database { includeConfig 'conf/test_existing_database.config' }
