--- a/environment.yml
+++ b/environment.yml
@@ -35,4 +35,4 @@ dependencies:
   - bioawk=1.0
   - conda-forge::ripgrep=12.0.1
   - pip:
-    - git+https://github.com/czbiohub/kh-tools.git@master#egg=khtools
+    - git+https://github.com/czbiohub/sencha.git@master#egg=sencha
