Add orthology type qc options

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,7 +23,8 @@ params {
   skip_trimming = false
 
   csv = false
-  csv_has_is_aligned = false
+  csv_has_is_aligned_col = false
+  csv_has_gtf_col = false
   protein_fastas = false
   input_is_protein = false
 
@@ -39,6 +40,10 @@ params {
   proteome_translate_fasta = "ftp://ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/reference_proteomes/Eukaryota/UP000005640_9606.fasta.gz"
   translate_jaccard_threshold = 0.95
   translate_peptide_ksize = 9
+
+  // Orthology featurecounts Options
+  fc_orthology_features_type = 'orthology_type'
+  skiporthologyQC = false
 
   // --- Protein search parameters ---
   proteome_search_fasta = false
