Update comment for diff hash with abundance

--- a/nextflow.config
+++ b/nextflow.config
@@ -30,7 +30,7 @@ params {
 
   // Differential hash expression options
   diff_hash_expression = false
-  diff_hash_with_abundance = false  // Small numbers for fewer features
+  diff_hash_with_abundance = false  // Don't use abundance of k-mers by default
   diff_hash_inverse_regularization_strength = 0.1  // Small numbers for fewer features
   diff_hash_solver = 'saga'  // Saga solver is fast for large datasets
   diff_hash_penalty = 'l1'   // Use strong penalty for large datasets
