--fc_orthology_features_type --> --fc_orthology_type

--- a/nextflow.config
+++ b/nextflow.config
@@ -45,7 +45,7 @@ params {
   fc_extra_attributes = 'gene_name'
   fc_group_features = 'gene_id'
   fc_count_type = 'exon'
-  fc_orthology_features_type = 'orthology_type'
+  fc_orthology_type = 'orthology_type'
   skiporthologyQC = false
   forwardStranded = false
   reverseStranded = false
