no camelcase for skip orhtology qc

--- a/nextflow.config
+++ b/nextflow.config
@@ -46,7 +46,7 @@ params {
   fc_group_features = 'gene_id'
   fc_count_type = 'exon'
   fc_orthology_type = 'orthology_type'
-  skiporthologyQC = false
+  skip_orthology_qc = false
   forwardStranded = false
   reverseStranded = false
   unStranded = true
