Propagate diff hash max group size

--- a/nextflow.config
+++ b/nextflow.config
@@ -32,6 +32,7 @@ params {
   diff_hash_expression = false
   diff_hash_with_abundance = false  // Don't use abundance of k-mers by default
   diff_hash_inverse_regularization_strength = 0.1  // Small numbers for fewer features
+  diff_hash_max_group_size = 100 // Not too many samples or else hash df gets huge
   diff_hash_solver = 'saga'  // Saga solver is fast for large datasets
   diff_hash_penalty = 'l1'   // Use strong penalty for large datasets
 
