Add noncoding search parameters

--- a/nextflow.config
+++ b/nextflow.config
@@ -65,6 +65,10 @@ params {
   diamond_taxonmap_gz = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/accession2taxid/prot.accession2taxid.gz"
   diamond_taxdmp_zip = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdmp.zip"
 
+  // --- Noncoding RNA search parameters -- //
+  search_noncoding = false
+  infernal_db = "ftp://ftp.ebi.ac.uk/pub/databases/Rfam/CURRENT/Rfam.cm.gz"
+  rfam2go = "ftp://ftp.ebi.ac.uk/pub/databases/Rfam/CURRENT/rfam2go/rfam2go"
 
   // --- Featurecounts orthology options ---
   // Not sure about this name
