saveReference --> save_reference

--- a/nextflow.config
+++ b/nextflow.config
@@ -74,6 +74,8 @@ params {
   // Not sure about this name
   do_featurecounts_orthology = false
 
+  save_reference = false
+
   // Boilerplate options
   name = false
   multiqc_config = false
