--- a/nextflow.config
+++ b/nextflow.config
@@ -25,7 +25,7 @@ params {
   skip_trimming = false
 
   csv = false
-  csv_has_is_aligned = false
+  csv_has_is_aligned = true
   protein_fastas = false
   input_is_protein = false
 
@@ -54,9 +54,6 @@ params {
   // Sourmash options
   sourmash_index = false  // pre-built sequence bloom tree index
   hashes = false
-  sourmash_ksize = false
-  sourmash_molecule = false
-  sourmash_log2_sketch_size = false
 
   // Use all of manually curated, verified UniProt/SwissProt as the reference proteome for searching for orthologs
   diamond_database = false
