--- a/nextflow.config
+++ b/nextflow.config
@@ -25,7 +25,7 @@ params {
   skip_trimming = false
 
   csv = false
-  csv_has_is_aligned = true
+  csv_has_is_aligned = false
   protein_fastas = false
   input_is_protein = false
 
