Add skip_remove_duplicates_bam to nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,6 +21,8 @@ params {
   bam = false
   bed = false
   bai = false
+  // Always remove duplicate reads, unless specified
+  skip_remove_duplicates_bam = false
 
   skip_trimming = false
 
