Add test_sencha_sambamba to nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -156,6 +156,7 @@ profiles {
   test_sourmash_search { includeConfig 'conf/test_sourmash_search.config' }
   test_sambamba { includeConfig 'conf/test_sambamba.config' }
   test_sencha { includeConfig 'conf/test_sencha.config'}
+  test_sencha_sambamba { includeConfig 'conf/test_sencha_sambamba.config'}
 }
 
 // Load igenomes.config if required
