Add test_sencha and test_sencha_sambamba to ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
         'test_hash2kmer',
         'test_input_is_protein',
         'test_sourmash_search',
+        'test_sencha',
+        'test_sencha_sambamba'
         ]
     steps:
       - uses: actions/checkout@v2
