--- a/nextflow.config
+++ b/nextflow.config
@@ -106,7 +106,7 @@ params {
 
 // Container slug. Stable releases should specify release tag!
 // Developmental code should specify :dev
-process.container = 'czbiohub/predictorthologs:dev'
+process.container = 'predictorthologs-local:latest'
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
