Add csv_has_reads parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -26,6 +26,7 @@ params {
 
   csv = false
   csv_has_is_aligned = false
+  csv_has_reads = false
   protein_fastas = false
   input_is_protein = false
 
