Update tests to use test_make_diamond_db

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         'test_diff_hash_sourmash',
         'test_diff_hash_is_aligned',
         'test_download_refseq',
-        'test_existing_database',
+        'test_make_diamond_db',
         'test_fastq',
         'test_fastq_paired',
         'test_hash2kmer',
