--- a/nextflow.config
+++ b/nextflow.config
@@ -150,10 +150,10 @@ profiles {
   test_diff_hash_sourmash { includeConfig 'conf/test_diff_hash_sourmash.config' }
   test_diff_hash_is_aligned { includeConfig 'conf/test_diff_hash_is_aligned.config' }
   test_download_refseq { includeConfig 'conf/test_download_refseq.config' }
-  test_existing_database { includeConfig 'conf/test_existing_database.config' }
   test_hash2kmer { includeConfig 'conf/test_hash2kmer.config' }
   test_input_is_protein { includeConfig 'conf/test_input_is_protein.config' }
   test_csv { includeConfig 'conf/test_csv.config' }
+  test_make_diamond_db { includeConfig 'conf/test_make_diamond_db.config' }
   test_sourmash_search { includeConfig 'conf/test_sourmash_search.config' }
   test_sambamba { includeConfig 'conf/test_sambamba.config' }
   test_sencha { includeConfig 'conf/test_sencha.config'}
