Add sourmash_scaled to test_sourmash_search

--- a/conf/test_sourmash_search.config
+++ b/conf/test_sourmash_search.config
@@ -19,6 +19,7 @@ params {
   csv = 'https://raw.githubusercontent.com/czbiohub/test-datasets/predictorthologs/testdata/liver_unaligned__samples.csv'
   sourmash_molecule = 'dayhoff'
   sourmash_ksize = 45
+  sourmash_scaled = 1
 
   input_is_protein = true
   protein_searcher = 'sourmash'
