Add sourmash_makedb test

--- a/nextflow.config
+++ b/nextflow.config
@@ -155,6 +155,7 @@ profiles {
   test_input_is_protein { includeConfig 'conf/test_input_is_protein.config' }
   test_csv { includeConfig 'conf/test_csv.config' }
   test_sourmash_search { includeConfig 'conf/test_sourmash_search.config' }
+  test_sourmash_makedb { includeConfig 'conf/test_sourmash_makedb.config' }
   test_sambamba { includeConfig 'conf/test_sambamba.config' }
   test_sencha { includeConfig 'conf/test_sencha.config'}
   test_sencha_sambamba { includeConfig 'conf/test_sencha_sambamba.config'}
