Add --diff_hash_min_abundance parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -37,6 +37,7 @@ params {
   diff_hash_solver = 'saga'  // Saga solver is fast for large datasets
   diff_hash_penalty = 'l1'   // Use strong penalty for large datasets
   diff_hash_min_cells = 3  // Minimum number of cells expressing each hash
+  diff_hash_min_abundance = 2 // Minimum hash abundance per cell
 
   translate_peptide_molecule = "protein"
   // UNIPROT human proteome is default reference. Human has Taxon ID 9606
