Add option to switch sourmash to search vs gather

--- a/nextflow.config
+++ b/nextflow.config
@@ -61,6 +61,7 @@ params {
   sourmash_molecule = false
   sourmash_log2_sketch_size = false
   sourmash_scaled = false
+  sourmash_searcher = 'gather'
 
   // Use all of manually curated, verified UniProt/SwissProt as the reference proteome for searching for orthologs
   diamond_database = false
